--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,22 @@
-= Journeyapi
+= Journey API Integration Generator
 
-This project rocks and uses MIT-LICENSE.
+Generates all the classes needed to work with your Journey App data
+
+== Download and installation
+
+Add to your Gemfile:
+
+  gem 'journeyapi', git: 'git@github.com:ckritzinger/journeyapi.git'
+
+Generate (replace the credentials with your own)
+
+  % rails generate journeyapi all 533bda53027894f69b001055 7Ajj5htRY1uzw7b4w23V
+
+If you are going to add domain logic to your models, extend the generated types
+This allows you to update your classes when your Journey data model changes
+
+   class User < Journey::User
+     def my_awesome_custom_method
+        ....
+     end
+   end
